--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Outfit:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav>
@@ -27,6 +31,9 @@
     <main>
         <section id="hero" class="hero">
             <div class="hero-content">
+                <div class="profile-pic">
+                    <img src="Muhammad Dawar Shaheer.png" alt="Dawar Shaheer">
+                </div>
                 <h1>Dawar Shaheer</h1>
                 <p class="subtitle">Game Developer | Unity, Godot & C++ Enthusiast</p>
                 <p class="tagline">Building immersive gameplay systems and interactive experiences.</p>
@@ -40,7 +47,10 @@
         <section id="about" class="about container">
             <h2 class="section-title">Professional Summary</h2>
             <div class="content-card">
-                <p>Creative and technically driven Game Developer with a strong passion for building immersive gameplay systems and interactive experiences. Skilled in Unity, Godot, C#, and C++, with hands-on experience in physics-based mechanics, 2D/3D game design, and custom engine concepts. Known for problem-solving, clean code practices, and delivering engaging player experiences.</p>
+                <p>Creative and technically driven Game Developer with a strong passion for building immersive gameplay
+                    systems and interactive experiences. Skilled in Unity, Godot, C#, and C++, with hands-on experience
+                    in physics-based mechanics, 2D/3D game design, and custom engine concepts. Known for
+                    problem-solving, clean code practices, and delivering engaging player experiences.</p>
             </div>
         </section>
 
@@ -86,21 +96,24 @@
                     <div class="project-info">
                         <h3>Mob Control–Style Game</h3>
                         <p class="tech-stack">Unity | C# | Physics</p>
-                        <p>Developed a physics-based crowd control game using the Unity Rigidbody system. Implemented mechanics like mob merging, collision handling, and dynamic movement.</p>
+                        <p>Developed a physics-based crowd control game using the Unity Rigidbody system. Implemented
+                            mechanics like mob merging, collision handling, and dynamic movement.</p>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-info">
                         <h3>2D Platformer RPG</h3>
                         <p class="tech-stack">Unity | C# | Aseprite</p>
-                        <p>Built comprehensive combat, inventory, and leveling systems. Designed enemy AI and created custom pixel-art assets using Aseprite.</p>
+                        <p>Built comprehensive combat, inventory, and leveling systems. Designed enemy AI and created
+                            custom pixel-art assets using Aseprite.</p>
                     </div>
                 </div>
                 <div class="project-card">
                     <div class="project-info">
                         <h3>Game Engine Prototype</h3>
                         <p class="tech-stack">C++ | ECS | Rendering</p>
-                        <p>Developed a modular engine structure from scratch featuring a rendering loop, input system, and Entity-Component System (ECS) fundamentals.</p>
+                        <p>Developed a modular engine structure from scratch featuring a rendering loop, input system,
+                            and Entity-Component System (ECS) fundamentals.</p>
                     </div>
                 </div>
             </div>
@@ -114,7 +127,9 @@
                         <h3>Freelance / Personal Game Development</h3>
                         <span>2023 – Present</span>
                     </div>
-                    <p>Designed and developed multiple personal game projects independently. Implemented complex gameplay systems and physics-based mechanics while practicing optimization and rigorous debugging.</p>
+                    <p>Designed and developed multiple personal game projects independently. Implemented complex
+                        gameplay systems and physics-based mechanics while practicing optimization and rigorous
+                        debugging.</p>
                 </div>
                 <hr>
                 <div class="edu-item">
@@ -140,4 +155,5 @@
         <p>&copy; 2024 Dawar Shaheer. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
